# aztec-packages

./: CHANGELOG.md
avm-witgen-ng/: Cargo.toml
avm-witgen-ng/src/: main.rs  value.rs
avm-witgen-ng/src/alu/: columns.rs  interactions.rs  mod.rs
avm-witgen-ng/src/memory/: mod.rs
avm-witgen-ng/src/ranges/: mod.rs
barretenberg/: CHANGELOG.md
barretenberg/ts/: CHANGELOG.md
l1-contracts/src/core/: Rollup.sol
l1-contracts/src/core/libraries/: ConstantsGen.sol
l1-contracts/test/fixtures/: empty_block_1.json  empty_block_2.json  mixed_block_1.json  mixed_block_2.json
yarn-project/aztec/: CHANGELOG.md  package.json
yarn-project/aztec-node/src/aztec-node/: server.ts
yarn-project/circuits.js/src/: constants.gen.ts
yarn-project/end-to-end/src/: e2e_crowdfunding_and_claim.test.ts
yarn-project/end-to-end/src/composed/: integration_l1_publisher.test.ts
yarn-project/end-to-end/src/e2e_blacklist_token_contract/: burn.test.ts  transfer_private.test.ts
yarn-project/end-to-end/src/e2e_public_cross_chain_messaging/: public_cross_chain_messaging_contract_test.ts
yarn-project/end-to-end/src/guides/: dapp_testing.test.ts
yarn-project/end-to-end/src/shared/: cross_chain_test_harness.ts
yarn-project/ethereum/src/: deploy_l1_contracts.ts
yarn-project/prover-client/src/orchestrator/: orchestrator.ts
yarn-project/prover-client/src/prover-agent/: prover-agent.ts
yarn-project/prover-node/src/: factory.ts
yarn-project/pxe/src/synchronizer/: synchronizer.ts
yarn-project/sequencer-client/src/client/: sequencer-client.ts
(+13 files in other folders)
