[package]
name = "avm-witgen-ng"
version = "0.1.0"
authors = ["The Aztec Team <hello@aztecprotocol.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.18"
env_logger = "0.11"
log = "0.4"
